# ChatAppServer

./: .gitignore  CMakeLists.txt  Database.sql  Main.qml  authentication.cpp  authentication.h  friend.cpp  friend.h  group.cpp  group.h  header.cpp  header.h  main.cpp  server.cpp  server.h
Testing/: test_data.sql
